# MCP-server

OriGeneMCP/: README.md  debug_tools.py  fabfile.py  local.conf.toml  pyproject.toml  start_service.sh
OriGeneMCP/deploy/: config.py  traffic_monitor.py  web.py
OriGeneMCP/tools/clinicaltrials/: clinicaltrials_api.py  deploy.py  server.py
OriGeneMCP/tools/dbsearch/: dbsearch_api.py  deploy.py  refseq_cache.fa  server.py
OriGeneMCP/tools/ncbi/: deploy.py  ncbi_api.py  pubmed_search.py  server.py
OriGeneMCP/tools/search/: deploy.py  jina_search.py  server.py  tavily_search.py
OriGeneMCP/tools/tooluniverse/: deploy.py  execute_function.py  graphql_tool.py  openfda_tool.py  restful_tool.py  server.py  utils.py
OriGeneMCP/tools/tooluniverse/data/: fda_drug_labeling_tools.json  monarch_tools.json  opentarget_tools.json  special_tools.json
