[project]
name = "mcp-tools"
version = "1.0.0"
description = "OriGene mcp tools index"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "anthropic==0.53.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "bio==1.8.0",
    "biopython==1.85",
    "biothings-client==0.4.1",
    "boto3==1.38.34",
    "botocore==1.38.34",
    "browser-use==0.2.6",
    "bs4==0.0.2",
    "cachetools==5.5.2",
    "click==8.2.1",
    "colorlog>=6.9.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "duckduckgo-search==8.0.2",
    "dynaconf==3.2.11",
    "fabric==3.2.2",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.12",
    "filetype==1.2.0",
    "fonttools==4.58.2",
    "frozenlist==1.7.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.0",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "gprofiler-official==1.0.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "grpcio-status==1.73.0",
    "gseapy==1.1.9",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "hyperframe==6.1.0",
    "invoke==2.2.0",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "json5==0.12.0",
    "justext==3.0.2",
    "kiwisolver==1.4.8",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.15",
    "langchain-aws==0.2.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.64",
    "langchain-deepseek==0.1.3",
    "langchain-google-genai==2.1.5",
    "langchain-mcp-adapters==0.1.7",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.21",
    "langchain-tavily==0.2.3",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.8",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.2.2",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.45",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.2",
    "markdownify==1.1.0",
    "marshmallow==3.26.1",
    "matplotlib==3.10.3",
    "mcp==1.9.3",
    "mem0ai==0.1.106",
    "memoization>=0.4.0",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "mygene==3.2.2",
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "ollama==0.5.1",
    "openai==1.84.0",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "pandas==2.3.0",
    "paramiko==3.5.1",
    "patchright==1.52.5",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "playwright==1.52.0",
    "pooch==1.8.2",
    "portalocker==2.10.1",
    "posthog==4.6.2",
    "primp==0.15.0",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pubchempy==1.0.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyee==13.0.0",
    "pynacl==1.5.0",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qdrant-client==1.14.2",
    "regex==2024.11.6",
    "requests>=2.32.4",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "s3transfer==0.13.0",
    "scipy==1.15.3",
    "screeninfo==0.8.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sse-starlette==2.3.6",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "toml>=0.10.2",
    "tooluniverse>=0.2.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uuid7==0.1.0",
    "uv==0.7.11",
    "uvicorn==0.34.3",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore::UserWarning"]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
